# backend

./: .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  sqlc.yml
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_client.sql  002_event.sql  003_merch.sql  004_active_events.sql  005_add_stand_id_to_event.sql  005_stand.sql  006_analytics.sql  007_points.sql
queries/: analytics.sql  client.sql  event.sql  merch.sql  points.sql  stand.sql
src/: main.py
src/db/: analytics.py  client.py  event.py  merch.py  models.py  points.py  stand.py
src/internal/: config.py
src/internal/cases/: analytics.py  client.py  event.py  merch.py  points.py  stand.py
src/internal/entities/: analytics.py  client.py  event.py  merch.py  points.py  stand.py
src/internal/handlers/: analytics.py  client.py  event.py  merch.py  other.py  points.py  stand.py
src/internal/infra/: db.py  hash.py  jwt.py
tests/internal/cases/: test_client.py  test_event.py  test_merch.py  test_stand.py
